blue-green/blue.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: blue-deploy
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: blue-deploy
  template: 
    metadata: 
      labels: 
        name: blue-deploy
    spec: 
      containers:
      - name: blue-deploy 
        image: adamtravis/rollouts:blue
        ports: 
        - name: http
          containerPort: 8080
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: blue-deploy
  labels: 
    name: green-deploy
spec: 
  ports: 
  - port: 80 
    targetPort: http
    protocol: TCP 
  selector: 
    name: blue-deploy 
  type: NodePort
