blue-green/green.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: green-deploy
spec:
  replicas: 2
  selector:
    matchLabels: 
      name: green-deploy
  template: 
    metadata: 
      labels: 
        name: green-deploy
    spec: 
      containers:
      - name: green-deploy
        image: adamtravis/rollouts:green
        ports: 
        - name: http
          containerPort: 8080
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: green-deploy
  labels: 
    name: green-deploy
spec: 
  ports: 
  - port: 80 
    targetPort: http
    protocol: TCP 
  selector: 
    name: green-deploy 
  type: NodePort
